# PulstarEDM

./: README  README.md
LightCollection4/: CMakeCache.txt  CMakeLists.txt  Doxyfile  GNUmakefile  LightCollection4  LightCollection4.cc  LightGuideSim.mac  LightGuideValues.txt  Makefile  cmake_install.cmake  gen_HRF.mac  process_runs.py  run_batch.py  user.properties  vis.mac
LightCollection4/analysis/: do_analysis.py  relative_efficiency.py
LightCollection4/analysis/bounce/: bounce_analysis.py
LightCollection4/analysis/geometry/: phase_fraction.py
LightCollection4/g4macros/: centered.mac  disable_hole.mac  do_scan.mac  enable_hole.mac  enable_hole_w_plug.mac  enable_window.mac  full_area.mac  index_change.mac  lab_setup_1.125_geometry.mac  random.mac  random_side.mac  testPiece.mac  test_detected_att.mac  test_geometry.mac
LightCollection4/include/: NedmAcrylicWindow.hh  NedmAnalysisManager.hh  NedmAnalysisMessenger.hh  NedmCellSide.hh  NedmDetectorConstruction.hh  NedmDetectorMessenger.hh  NedmDetectorParameters.hh  NedmDetectorParameters.hh.New  NedmDetectorParameters.hh.Old  NedmEventAction.hh  NedmGDMLDetectorConstruction.hh  NedmLightGuide.hh  NedmOpTPB.hh  NedmPMT.hh  NedmPhysicsList.hh  NedmPrimaryGeneratorAction.hh  NedmPrimaryGeneratorMessenger.hh  NedmRunAction.hh  NedmSteppingAction.hh  NedmTrackInformation.hh  NedmTrackingAction.hh  NedmTrajectory.hh
LightCollection4/raw/: bent_1125  bent_175  center_lg.txt  compound_solid_data.txt  left_lg.txt  right_lg.txt
LightCollection4/res/: center_lg.txt  left_lg.txt  right_lg.txt
LightCollection4/scripts/: generate.py  run_sim.py
LightCollection4/src/: NedmAcrylicWindow.cc  NedmAnalysisManager.cc  NedmAnalysisMessenger.cc  NedmCellSide.cc  NedmCompoundSolid.cc  NedmDetectorConstruction.cc  NedmDetectorMessenger.cc  NedmDetectorParameters.cc  NedmDetectorParameters.cc.New  NedmDetectorParameters.cc.Old  NedmEventAction.cc  NedmLightGuide.cc  NedmOpTPB.cc  NedmPMT.cc  NedmPhysicsList.cc  NedmPrimaryGeneratorAction.cc  NedmPrimaryGeneratorMessenger.cc  NedmQuartzWindow.cc  NedmRunAction.cc  NedmSteppingAction.cc  NedmTrackInformation.cc  NedmTrackingAction.cc  NedmTrajectory.cc
Pulstar4/: GNUmakefile  (+17 more)
(+72 files in other folders)
